--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coinbase/onchainkit": "^0.38.19",
     "@sogni-ai/sogni-client": "^3.1.1",
     "fft.js": "^4.0.4",
     "next": "^14.2.0",
