--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "fft.js": "^4.0.4",
     "next": "^14.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
+    "viem": "^2.34.0",
+    "wagmi": "^2.16.4"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
